syntax="proto2";

import "aap_protobuf/service/bluetooth/message/BluetoothPairingMethod.proto";

package aap_protobuf.service.bluetooth;

message BluetoothService
{
    required string car_address = 1;
    repeated message.BluetoothPairingMethod supported_pairing_methods = 2 [packed = true];
}
